feat: allow less brightness levels

--- a/wasp/boards/pinetime/watch.py.in
+++ b/wasp/boards/pinetime/watch.py.in
@@ -21,6 +21,7 @@ import draw565
 
 from machine import I2C
 from machine import Pin
+from machine import PWM
 #from machine import Signal
 from machine import SPI
 
@@ -40,13 +41,16 @@ class Backlight(object):
     mid = Pin("BL_MID", Pin.OUT, value=1)
     hi = Pin("BL_HI", Pin.OUT, value=1)
 
+
     def __init__(self, level=1):
         self.set(level)
+        self.pwm = PWM(0, pin=Pin("BL_LO", Pin.OUT), freq=PWM.FREQ_16MHZ, duty=85, period=160000)
 
     def set(self, level):
         hi = 1
         mid = 1
         lo = 1
+        self.pwm.deinit()
 
         if level >= 3:
             hi = 0
@@ -54,6 +58,8 @@ class Backlight(object):
             mid = 0
         elif level == 1:
             lo = 0
+        else:
+            self.pwm.init()
 
         self.hi(hi)
         self.mid(mid)
