temporarily disable low brightness

--- a/wasp/boards/pinetime/watch.py.in
+++ b/wasp/boards/pinetime/watch.py.in
@@ -40,7 +40,7 @@ class Backlight(object):
     lo = Pin("BL_LO", Pin.OUT, value=0)
     mid = Pin("BL_MID", Pin.OUT, value=1)
     hi = Pin("BL_HI", Pin.OUT, value=1)
-    pwm = PWM(0, pin=lo, freq=PWM.FREQ_16MHZ, duty=85, period=160000)
+    # pwm = PWM(0, pin=lo, freq=PWM.FREQ_16MHZ, duty=85, period=160000)
 
     def __init__(self, level=1):
         self.set(level)
@@ -49,7 +49,7 @@ class Backlight(object):
         hi = 1
         mid = 1
         lo = 1
-        self.pwm.deinit()
+        # self.pwm.deinit()
 
         if level >= 3:
             hi = 0
@@ -58,7 +58,8 @@ class Backlight(object):
         elif level == 1:
             lo = 0
         else:
-            self.pwm.init()
+            pass
+            # self.pwm.init()
 
         self.hi(hi)
         self.mid(mid)
